--- a/style.css
+++ b/style.css
@@ -33,17 +33,22 @@ header .container {
 
 .brand {
   float: none;
-  }
+}
 
 .navbar-center
 {
     position: absolute;
     width: 100%;
     left: 0;
-    top: 0;
+    top: -9.5px;
     text-align: center;
     margin: auto;
-  height:100%;
+    height:100%;
+}
+
+.nav>li>a:hover, .nav>li>a:focus {
+  text-decoration: none;
+  background-color: transparent;
 }
 
 .navbar-est
@@ -51,11 +56,11 @@ header .container {
     position: absolute;
     width: 100%;
     left: 70px;
-    top: 63px;
+    top: 53px;
     text-align: center;
     margin: auto;
-  height:100%;
-  font-size: 11px;
+    height:100%;
+    font-size: 11px;
 }
 
 hr {
