--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url(http://subtlepatterns.com/patterns/diagmonds.png);
+	background: url(images/diagmonds.png);
 	background-color: #555;
 	color: #222;
 }
