--- a/templates/startseite.tmpl
+++ b/templates/startseite.tmpl
@@ -12,17 +12,193 @@
     {{ helper.open_graph_metadata(post) }}
     {{ helper.twitter_card_information(post) }}
     {{ helper.meta_translations(post) }}
+    <link href="css/fotorama.css" rel="stylesheet">
     <style>
-      div.e-content.entry-content {
-        font-size: 120%;
+      @media (min-width: 768px) {
+          .pull-sm-left {
+              float: left !important;
+          }
+          .pull-sm-right {
+              float: right !important;
+          }
+          .pull-sm-none {
+              float: none !important;
+          }
+      }
+      @media (min-width: 992px) {
+          .profiltext {
+            font-size: 112%;
+          }
+          .lead {
+            font-size: 180%;
+          }
+          .profilepicture {
+            width: 50%;
+            margin-left: 35px;
+            margin-bottom: 35px;
+          }
+          .pull-md-left {
+              float: left !important;
+          }
+          .pull-md-right {
+              float: right !important;
+          }
+          .pull-md-none {
+              float: none !important;
+          }
+      }
+      @media (min-width: 1200px) {
+          .pull-lg-left {
+              float: left !important;
+          }
+          .pull-lg-right {
+              float: right !important;
+          }
+          .pull-lg-none {
+              float: none !important;
+          }
+      }
+      .pull-none {
+          float: none !important;
       }
     </style>
 {% endblock %}
 
 {% block content %}
     <div class="e-content entry-content" itemprop="text">
-    {{ post.text() }}
+
+      <div class="pull-md-right profilepicture">
+        <div class="fotorama" data-fit="cover" data-transition="crossfade" data-loop="true" data-shuffle="true" data-keyboard="true">
+          <img src="davidak-Foto-1.jpg" alt="Foto von davidak">
+          <img src="davidak-Foto-2.jpg" alt="Foto von davidak">
+          <img src="davidak-Foto-3.jpg" alt="Foto von davidak">
+          <img src="davidak-Foto-4.jpg" alt="Foto von davidak">
+          <img src="davidak-Foto-5.jpg" alt="Foto von davidak">
+        </div>
+        <br>
+        <p class="text-center">
+          <b>E-Mail: </b>post at davidak.de<br>
+          <b>PGP: </b><a href="pgp-publickey-davidak.asc">B60197B0</a><br>
+          <!--oder <a href="#">Kontaktformular</a> gibt es noch nicht :\ -->
+        </p>
+      </div>
+
+      <div class="profiltext">
+        {{ post.text() }}
+      </div>
+
+      <h2>Meine Projekte</h2>
+
+      <div class="row">
+
+      <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="https://www.youtube.com/watch?v=9D1lMTwcLgY"><img src="Wortspiele-a-la-Polysemia-Fanvideo.jpg" alt="Wortspiele a la Polysemia Fanvideo"></a>
+            <div class="caption">
+              <h3>Wortspiele à la Polysemia</h3>
+              <p>Ein Fanvideo zur Sendung <a href="https://www.youtube.com/playlist?list=PL4F720557B5A9902E">Polysemia</a> mit Freunden.</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="thumbnail">
+            <a href="http://aquaregia.de/"><img src="AquaRegia-Band-Webseite.jpg" alt="AquaRegia Band Webseite"></a>
+            <div class="caption">
+              <h3>AquaRegia Band</h3>
+              <p>Webseite und Fotos für die Band <a href="http://aquaregia.de/">AquaRegia</a>.</p>
+            </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="http://brennblatt.de/"><img src="Karl-Brennblatt-Webseite.jpg" alt="Karl Brennblatt Webseite"></a>
+            <div class="caption">
+              <h3>Karl Brennblatt</h3>
+              <p>Webseite für den Künstler <a href="http://brennblatt.de/">Karl Brennblatt</a>.</p>
+            </div>
+          </div>
+      </div>
+
+      </div>
+
+      <div class="row">
+
+      <div class="col-md-4">
+           <div class="thumbnail">
+            <a href="https://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
+            <div class="caption">
+              <h3>GNA Clan</h3>
+              <p>Webseite und Game-Server für den GNA Clan.</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+           <div class="thumbnail">
+            <a href="https://davidak.de/random-graph/"><img src="Random-Graph.jpg" alt="Random Graph"></a>
+            <div class="caption">
+              <h3>Random Graph</h3>
+              <p>Echtzeit Graph mit zufälligen Daten.</p>
+            </div>
+          </div>
+      </div>
+
+      <div class="col-md-4">
+          <div class="thumbnail">
+            <a href="https://satzgenerator.de/"><img src="Satzgenerator.jpg" alt="Satzgenerator"></a>
+            <div class="caption">
+              <h3>Satzgenerator</h3>
+              <p>Zufällige Sätze generieren, bewerten und teilen.</p>
+            </div>
+          </div>
+      </div>
+
+      </div>
+
+      <table class="table table-striped">
+        <tr>
+          <th><a href="https://media.ccc.de/b/congress">Chaos Communication Congress/Camp</a></th>
+          <td>Kameramann und Regie/Bildmischer bei vielen Vorträgen. Live gestreamt ins Internetz.</td>
+        </tr>
+        <tr>
+          <th><a href="http://concert.arte.tv/de/collections/moers-festival-2014">Moers Festival 2014</a></th>
+          <td>Kameramann bei fast allen Bands und auch einmal <a href="https://youtu.be/ZTOrPhqwkA8">Regie/Bildmischer</a>. Live bei ARTE.</td>
+        </tr>
+        <tr>
+          <th><a href="https://github.com/davidak/random-vcard-generator">Random VCard-Generator</a></th>
+          <td>Das Kommandozeilen-Programm generiert VCards mit zufälligen, aber plausiblen Daten.</td>
+        </tr>
+        <tr>
+          <th><a href="https://pyzufall.readthedocs.org/de/latest/">PyZufall</a></th>
+          <td>Die Python-Bibliothek PyZufall beinhaltet diverse Funktionen für das Generieren zufälliger Daten.</td>
+        </tr>
+        <tr>
+          <th><a href="https://davidak.de/personen/">Personendatenbank</a></th>
+          <td>Daten von über 10.000 Personen. Zufällig generiert mit einem <a href="https://davidak.de/wiki/perl/personendatengenerator">Perl-Script</a>.</td>
+        </tr>
+        <tr>
+          <th><a href="https://davidak.de/wiki/perl/namengenerator">Namengenerator</a></th>
+          <td>Ein Perl-Script, um Namen zu generieren.</td>
+        </tr>
+
+        <tr>
+          <th><a href="https://github.com/davidak/python-peniscoin-miner">Peniscoin Miner</a></th>
+          <td>Eine Parodie auf <a href="https://de.wikipedia.org/wiki/Bitcoin">Bitcoin</a> und andere <a href="https://de.wikipedia.org/wiki/Kryptow%C3%A4hrung">Kryptowährungen</a> in Form eines lauffähigen Programms.</td>
+        </tr>
+      </table>
+
     </div>
+
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<!-- disable tracking -->
+<!-- waiting for new release of fotorama without visitor tracking https://github.com/artpolikarpov/fotorama/commit/fb4145f814fa1b4b25471b0c121d151e306237e4 -->
+<script>
+  blockFotoramaData = true;
+</script>
+<script src="js/fotorama.js"></script>
 {% endblock %}
 
 {% block sourcelink %}
