add timezone to startpage
closes #21

--- a/templates/startseite.tmpl
+++ b/templates/startseite.tmpl
@@ -80,6 +80,7 @@
           <b>E-Mail: </b>post at davidak.de<br>
           <b>PGP: </b><a href="pgp-publickey-davidak.asc">B60197B0</a><br>
           <!--oder <a href="#">Kontaktformular</a> gibt es noch nicht :\ -->
+          <b>Timezone: </b><a href="https://www.timeanddate.com/time/zones/cest">CEST</a> (UTC +2) im Sommer<br>und <a href="https://www.timeanddate.com/time/zones/cet">CET</a> (UTC +1) im Winter<br>
         </p>
       </div>
 
