make sentence more clear

--- a/templates/startseite.tmpl
+++ b/templates/startseite.tmpl
@@ -165,7 +165,7 @@
         </tr>
         <tr>
           <th><a href="http://concert.arte.tv/de/collections/moers-festival-2014">Moers Festival 2014</a></th>
-          <td>Kameramann bei fast allen Bands und auch einmal <a href="https://youtu.be/ZTOrPhqwkA8">Regie/Bildmischer</a>. Live bei ARTE.</td>
+          <td>Kameramann bei allen Bands außer einer, bei der ich <a href="https://youtu.be/ZTOrPhqwkA8">Regie/Bildmischer</a> war. Live bei ARTE.</td>
         </tr>
         <tr>
           <th><a href="https://github.com/davidak/random-vcard-generator">Random VCard-Generator</a></th>
