Small improvements to the text

--- a/templates/startseite.tmpl
+++ b/templates/startseite.tmpl
@@ -77,10 +77,10 @@
         </div>
         <br>
         <p class="text-center">
-          <b>E-Mail: </b>post at davidak.de<br>
-          <b>PGP: </b><a href="pgp-publickey-davidak.asc">B60197B0</a><br>
+          <b>E-Mail:</b> post at davidak.de<br>
+          <b>Öffentlicher PGP-Schlüssel:</b> <a href="pgp-publickey-davidak.asc">B60197B0</a><br>
           <!--oder <a href="#">Kontaktformular</a> gibt es noch nicht :\ -->
-          <b>Timezone: </b><a href="https://www.timeanddate.com/time/zones/cest">CEST</a> (UTC +2) im Sommer<br>und <a href="https://www.timeanddate.com/time/zones/cet">CET</a> (UTC +1) im Winter<br>
+          <b>Zeitzone: </b><a href="https://www.timeanddate.com/time/zones/cest">CEST</a> (UTC +2) im Sommer<br>und <a href="https://www.timeanddate.com/time/zones/cet">CET</a> (UTC +1) im Winter<br>
         </p>
       </div>
 
@@ -106,7 +106,7 @@
         <div class="thumbnail">
             <a href="http://aquaregia.de/"><img src="AquaRegia-Band-Webseite.jpg" alt="AquaRegia Band Webseite"></a>
             <div class="caption">
-              <h3>AquaRegia Band</h3>
+              <h3>AquaRegia</h3>
               <p>Webseite und Fotos für die Band <a href="http://aquaregia.de/">AquaRegia</a>.</p>
             </div>
         </div>
@@ -131,7 +131,7 @@
             <a href="https://davidak.de/gna/"><img src="GNA-Clan-Webseite.jpg" alt="GNA Clan Webseite"></a>
             <div class="caption">
               <h3>GNA Clan</h3>
-              <p>Webseite und Game-Server für den GNA Clan.</p>
+              <p>Webseite und Game-Server für den <a href="https://davidak.de/gna/">GNA Clan</a>.</p>
             </div>
           </div>
       </div>
